; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_output.c_handle_transform.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_output.c_handle_transform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_output = type { i32, i32, i32 }
%struct.wl_listener = type { i32 }

@transform = common dso_local global i32 0, align 4
@output = common dso_local global %struct.sway_output* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @handle_transform to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_transform(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_output*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %7 = load %struct.sway_output*, %struct.sway_output** %5, align 8
  %8 = ptrtoint %struct.sway_output* %7 to i32
  %9 = load i32, i32* @transform, align 4
  %10 = call %struct.sway_output* @wl_container_of(%struct.wl_listener* %6, i32 %8, i32 %9)
  store %struct.sway_output* %10, %struct.sway_output** %5, align 8
  %11 = load %struct.sway_output*, %struct.sway_output** %5, align 8
  %12 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load %struct.sway_output*, %struct.sway_output** %5, align 8
  %17 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %15, %2
  br label %31

21:                                               ; preds = %15
  %22 = load %struct.sway_output*, %struct.sway_output** %5, align 8
  %23 = call i32 @arrange_layers(%struct.sway_output* %22)
  %24 = load %struct.sway_output*, %struct.sway_output** %5, align 8
  %25 = call i32 @arrange_output(%struct.sway_output* %24)
  %26 = call i32 (...) @transaction_commit_dirty()
  %27 = load %struct.sway_output*, %struct.sway_output** %5, align 8
  %28 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @update_output_manager_config(i32 %29)
  br label %31

31:                                               ; preds = %21, %20
  ret void
}

declare dso_local %struct.sway_output* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @arrange_layers(%struct.sway_output*) #1

declare dso_local i32 @arrange_output(%struct.sway_output*) #1

declare dso_local i32 @transaction_commit_dirty(...) #1

declare dso_local i32 @update_output_manager_config(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
